# python-client-tutorial

./: .gitignore  README.md  pyproject.toml  requirements.txt
boston-house-pricing/: app.py  boston-house-pricing.ipynb  linear-regression-house-price-prediction.ipynb  serving.py
