[tool.poetry]
name = "mlaide-tutorial"
version = "0.1.0"
description = ""
authors = ["Raman Singh <mail.raman.s@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.1"
jupyter = "^1.0.0"
pandas = "^1.2.3"
numpy = "^1.20.2"
matplotlib = "^3.4.0"
seaborn = "^0.11.1"
mlaide = { path = "../python-client", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
